-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.8
-
Fix Version/s: None
-
Component/s: Python - Compiler
-
Labels:
-
Patch Info:Patch Available
The python compiler generates a nice "Service-remove" script for making requests to the server.
The script doesn't include any methods from inherited services.
Example:
service Base {
i32 getStatus()
}
service Derived extends Base {
string doWork()
}
Excerpt from generated Base-remote
print 'Usage: ' + sys.argv[0] + ' [-h host:port] [-u url] [-f[ramed]] function [arg1 [arg2...]]' print '' print 'Functions:' print ' i32 getStatus()' print ''
Excerpt from generated Derived-remote
print 'Usage: ' + sys.argv[0] + ' [-h host:port] [-u url] [-f[ramed]] function [arg1 [arg2...]]' print '' print 'Functions:' print ' string doWork()' print ''
Here we can see that Derived doesn't have a method defined for getStatus. These excerpts show just the usage statement but the implementation for getStatus doesn't exists either.
Also on a different note the remote script depends on the Service.py script to be in the same directory. It would be nice if the import where absolute so that the script could be executed from any directory.