THRIFT-1494 Python generated "Service-remote" script doesn't honor service inheritance Patch: Nathaniel Cook

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1410130 13f79535-47bb-0310-9956-ffa450edef68